--- a/components/app.css
+++ b/components/app.css
@@ -1,3 +1,7 @@
+.app {
+  min-width: 1024px;
+}
+
 .header {
   height: 50px;
   width: 100%;
@@ -18,6 +22,7 @@
 }
 
 .map {
+  display: flex;
   flex: 1;
   border: 1px solid blue;
 }
