Add pokemonMarkers click handler

--- a/components/pokedex/pokedex.css
+++ b/components/pokedex/pokedex.css
@@ -2,10 +2,15 @@
   line-height: 30px;
   padding: 8px;
   border-bottom: 1px solid #ddd;
+    /*border-bottom: 1px solid #555;
+    background: #222;
+    color: white;
+    font-size: 14px;*/
 }
 
 .img {
   vertical-align: middle;
+  height: 40px;
   width: 40px;
   margin: 0 8px;
 }
