--- a/components/map/map.css
+++ b/components/map/map.css
@@ -7,3 +7,9 @@
   border-radius: 5px;
   box-shadow: 4px 4px 1px #555;
 }
+
+.infoWindow {
+  width: 212px;
+  font-size: 10px;
+  margin-top: 5px;
+}
