--- a/components/pokemon/pokemon.css
+++ b/components/pokemon/pokemon.css
@@ -1,5 +1,14 @@
 .header {
   text-align: center;
+  color: white;
+}
+
+.stage {
+  margin: 1em auto;
+  -webkit-perspective: 1024px;
+  -moz-perspective: 1024px;
+  -ms-perspective: 1024px;
+  perspective: 1024px;
 }
 
 .img {
@@ -8,4 +17,37 @@
   display: block;
   margin: auto;
   margin-top: 20px;
+  -webkit-animation-name: spinner;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 7s;
+
+  animation-name: spinner;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-duration: 7s;
+
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+@-webkit-keyframes spinner {
+  from { -webkit-transform: rotateY(0deg);    }
+  to   { -webkit-transform: rotateY(-360deg); }
+}
+
+/* all other browsers */
+@keyframes spinner {
+  from {
+    -moz-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+  }
+  to {
+    -moz-transform: rotateY(-360deg);
+    -ms-transform: rotateY(-360deg);
+    transform: rotateY(-360deg);
+  }
 }
