--- a/components/pokedex/pokedex.css
+++ b/components/pokedex/pokedex.css
@@ -1,3 +1,26 @@
+.pokedex {
+  height: 100vh;
+  width: 325px;
+  overflow: hidden;
+  position: fixed;
+  top: 75px;
+}
+
+.title {
+  height: 40px;
+  padding: 12px 0px 12px 8px;
+  border-bottom: 1px solid #777;
+  background: #555;
+  color: white;
+  font-size: 16px;
+}
+
+.list {
+  width: 325px;
+  height: calc(100% - 115px);
+  overflow-y: scroll;
+}
+
 .item {
   line-height: 30px;
   padding: 8px;
