Update font, add new pokemon probability, remove infoWindow onPokeballClick

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,5 +13,5 @@ div, p, form, label, input {
   text-align: inherit;
   text-decoration: inherit;
   background: transparent;
-  font-family: Pokemon GB;
+  font-family: Cantarell;
 }
